benerin authentication utk unit testing dan buat endpoint get all contacts by user